// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaveSchedule renders intermittent schedule 1`] = `
<Fragment>
  <ReviewHeading
    level="2"
  >
    Leave schedule
  </ReviewHeading>
  <Table
    className="width-full"
  >
    <caption>
      Leave schedule details table
    </caption>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Date range
        </th>
        <th
          scope="col"
        >
          Leave frequency
        </th>
        <th
          scope="col"
        >
          Details
        </th>
      </tr>
    </thead>
    <tbody>
      <IntermittentLeaveSchedule
        intermittentLeavePeriods={
          Array [
            IntermittentLeavePeriod {
              "duration": 3,
              "duration_basis": "Hours",
              "end_date": "2021-07-01",
              "frequency": 6,
              "frequency_interval": 6,
              "frequency_interval_basis": "Months",
              "leave_period_id": "mock-leave-period-id",
              "start_date": "2021-02-01",
            },
          ]
        }
      />
    </tbody>
  </Table>
  <ReviewRow
    label="Documentation"
    level="3"
  >
    <a
      className="text-normal"
      href="example-hcp-link.pdf"
    >
      Health care provider form
    </a>
  </ReviewRow>
</Fragment>
`;

exports[`LeaveSchedule renders reduced schedule 1`] = `
<Fragment>
  <ReviewHeading
    level="2"
  >
    Leave schedule
  </ReviewHeading>
  <Table
    className="width-full"
  >
    <caption>
      Leave schedule details table
    </caption>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Date range
        </th>
        <th
          scope="col"
        >
          Leave frequency
        </th>
        <th
          scope="col"
        >
          Details
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          2/1/2021 – 7/1/2021
        </th>
        <td>
          Reduced leave schedule
        </td>
        <td>
          Reduced by 10 hours per week
        </td>
      </tr>
    </tbody>
  </Table>
  <ReviewRow
    label="Documentation"
    level="3"
  >
    <a
      className="text-normal"
      href="example-hcp-link.pdf"
    >
      Health care provider form
    </a>
  </ReviewRow>
</Fragment>
`;
